@@ -35,7 +35,7 @@ require_once BRAINWEBOPTIONALDNIDIR . 'Helper.php';
  * usefull when you modify your database, or register a new hook ...
  * Don't forget to create one file per version.
  */
-function upgrade_module_1_0_4($module)
+function upgrade_module_1_0_5($module)
 {
 	$generator = new BrainWebOptionalDni_Overriding($module);
 
