@@ -1,3 +1,4 @@
+2017-01-23 v1.0.5 compatibility for PrestaShop version 1.6.1.4
 2017-01-17 v1.0.4 - PrestaShop version 1.6.1.11
                   - added absolute directory path for included classes
                   - refresh of class index after install or ugrade
